[package]
name = "log"
version = "0.1.0"
authors = ["David Golembiowski <dmgolembiowski@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rusqlite = "0.21.0"
serde_derive = "1.0.104"
serde = "1.0.104"
serde_json = "1.0.44"
postgres = "0.17.0"
postgres-protocol = "0.5.0"
unsegen = "0.2.3"
